<resources>
    <string name="app_name">Librear</string>
    <string name="enviar">Enviar</string>
    <string name="e_mail">e-mail</string>
    <string name="voltar">Voltar</string>
    <string name="recuperar_senha">Recuperar senha</string>
    <string name="insira_seu_e_mail_e_enviaremos_um_link_para_recuperar_sua_senha">Insira seu e-mail e enviaremos um link para recuperar sua senha</string>
</resources>